--- a/app/views/docs/new.html.haml
+++ b/app/views/docs/new.html.haml
@@ -1,5 +1,4 @@
-%h1 New Docs
-
-= render 'form'
-
-= link_to "All Docs", docs_path
+.wrapper_with_padding
+	%h1 New Docs
+	= render 'form'
+	= link_to "All Docs", docs_path
